extends Control

# Variables para almacenar datos
var acciones_correctivas = []
var no_conformidades_pendientes = []
var no_conformidad_seleccionada = null
var no_conformidades_filtradas = []
var resultados_visibles = true  # Estado inicial: resultados visibles
var modo_busqueda_centrada = false  # Modo donde solo se muestran los resultados centrados
var panel_busqueda_visible = true  # Estado inicial: panel de b√∫squeda visible

func _ready():
	# Conectar botones
	$ContenedorPrincipal/FormContainer/BotonesForm/BtnRegistrarAccion.connect("pressed", _on_registrar_accion)
	$ContenedorPrincipal/FormContainer/BotonesForm/BtnLimpiarForm.connect("pressed", _on_limpiar_formulario)
	$ContenedorPrincipal/PanelAcciones/BotonesAcciones/BtnAsignarTareas.connect("pressed", _on_asignar_tareas)
	$ContenedorPrincipal/PanelAcciones/BotonesAcciones/BtnNotificarEstado.connect("pressed", _on_notificar_estado)
	$ContenedorPrincipal/PanelAcciones/BotonesAcciones/BtnActualizarTabla.connect("pressed", _on_actualizar_tabla)
	$ContenedorPrincipal/BotonesInferiores/BtnVolverMenu.connect("pressed", _on_volver_menu)
	
	# Conectar botones de b√∫squeda
	$ContenedorPrincipal/PanelBusqueda/HBoxBusqueda/BtnBuscar.connect("pressed", _on_buscar_nc)
	$ContenedorPrincipal/PanelBusqueda/HBoxBusqueda/BtnEvaluarNC.connect("pressed", _on_evaluar_nc)
	$ContenedorPrincipal/PanelBusqueda/HBoxBusqueda/BtnToggleResultados.connect("pressed", _on_toggle_resultados)
	
	# Conectar selecci√≥n en resultados de b√∫squeda
	$ContenedorPrincipal/PanelBusqueda/ResultadosBusqueda.item_selected.connect(_on_nc_seleccionada)
	
	# Conectar botones del di√°logo de tareas
	$DialogoTareas/VBoxContainer/HBoxContainer/BtnGuardarTarea.connect("pressed", _on_dialogo_tareas_guardar)
	$DialogoTareas/VBoxContainer/HBoxContainer/BtnCancelar.connect("pressed", $DialogoTareas.hide)
	
	# Conectar botones del di√°logo de evaluaci√≥n
	$DialogoEvaluacion/VBoxContainer2/HBoxContainerBotones/BtnGuardarEvaluacion.connect("pressed", _on_dialogo_evaluacion_guardar)
	$DialogoEvaluacion/VBoxContainer2/HBoxContainerBotones/BtnCancelarEvaluacion.connect("pressed", $DialogoEvaluacion.hide)
	
	# Conectar cierre de ventanas
	$DialogoTareas.close_requested.connect($DialogoTareas.hide)
	$DialogoEvaluacion.close_requested.connect($DialogoEvaluacion.hide)
	
	# Conectar entrada de b√∫squeda para buscar al presionar Enter
	$ContenedorPrincipal/PanelBusqueda/HBoxBusqueda/InputBusqueda.text_submitted.connect(_on_buscar_enter)
	
	# Configurar opciones de evaluaci√≥n
	_configurar_opciones_evaluacion()
	
	# Cargar datos iniciales
	_cargar_no_conformidades()
	_configurar_tabla()
	_on_limpiar_formulario()
	
	# Ajustar el contenedor de resultados
	#$ContenedorPrincipal/PanelBusqueda/ResultadosBusqueda.anchors_preset = Control.PRESET_VCENTER_WIDE
	$ContenedorPrincipal/PanelBusqueda/ResultadosBusqueda.anchor_top = 1.0
	$ContenedorPrincipal/PanelBusqueda/ResultadosBusqueda.anchor_bottom = 1.0
	$ContenedorPrincipal/PanelBusqueda/ResultadosBusqueda.offset_top = -120
	$ContenedorPrincipal/PanelBusqueda/ResultadosBusqueda.offset_bottom = -10
	
	# Mostrar todas las no conformidades inicialmente
	_actualizar_resultados_busqueda()
	
	# Configurar estado inicial de los botones de toggle
	_actualizar_boton_toggle()

func _configurar_opciones_evaluacion():
	# Configurar opciones de severidad
	var severidad = $DialogoEvaluacion/VBoxContainer2/OpcionesSeveridad
	severidad.clear()
	severidad.add_item("Baja", 0)
	severidad.add_item("Media", 1)
	severidad.add_item("Alta", 2)
	severidad.add_item("Cr√≠tica", 3)
	
	# Configurar opciones de impacto
	var impacto = $DialogoEvaluacion/VBoxContainer2/OpcionesImpacto
	impacto.clear()
	impacto.add_item("Calidad", 0)
	impacto.add_item("Seguridad", 1)
	impacto.add_item("Medio Ambiente", 2)
	impacto.add_item("Costos", 3)
	impacto.add_item("Tiempo", 4)
	impacto.add_item("Cliente", 5)

func _configurar_tabla():
	# Configurar columnas de la tabla
	var tabla = $ContenedorPrincipal/PanelAcciones/ScrollContainer/TablaAcciones
	tabla.clear()
	tabla.max_columns = 6
	tabla.auto_height = true
	
	# Agregar encabezados
	tabla.add_item("ID")
	tabla.add_item("No Conformidad")
	tabla.add_item("Descripci√≥n")
	tabla.add_item("Responsable")
	tabla.add_item("Fecha L√≠mite")
	tabla.add_item("Estado")
	
	# Deshabilitar selecci√≥n de encabezados
	for i in range(6):
		tabla.set_item_selectable(i, false)

func _cargar_no_conformidades():
	# Simular carga de no conformidades desde base de datos
	no_conformidades_pendientes = [
		{
			"id": "NC-2024-001", 
			"descripcion": "Retraso en entrega de producto A", 
			"tipo": "Incidencia", 
			"fecha": "15/01/2024",
			"area": "Log√≠stica",
			"responsable": "Juan P√©rez",
			"severidad": "",
			"evaluacion": "",
			"evaluada": false
		},
		{
			"id": "NC-2024-002", 
			"descripcion": "Producto con defecto de fabricaci√≥n", 
			"tipo": "Queja", 
			"fecha": "20/01/2024",
			"area": "Producci√≥n",
			"responsable": "Mar√≠a G√≥mez",
			"severidad": "",
			"evaluacion": "",
			"evaluada": false
		},
		{
			"id": "NC-2024-003", 
			"descripcion": "No conformidad en auditor√≠a interna", 
			"tipo": "Auditor√≠a", 
			"fecha": "25/01/2024",
			"area": "Calidad",
			"responsable": "Carlos Ruiz",
			"severidad": "",
			"evaluacion": "",
			"evaluada": false
		},
		{
			"id": "NC-2024-004", 
			"descripcion": "Queja por atenci√≥n al cliente", 
			"tipo": "Reclamaci√≥n", 
			"fecha": "28/01/2024",
			"area": "Servicio al Cliente",
			"responsable": "Ana L√≥pez",
			"severidad": "",
			"evaluacion": "",
			"evaluada": false
		},
		{
			"id": "NC-2024-005", 
			"descripcion": "Documentaci√≥n incompleta en proceso", 
			"tipo": "Documentaci√≥n", 
			"fecha": "02/02/2024",
			"area": "Administraci√≥n",
			"responsable": "Pedro Mart√≠nez",
			"severidad": "",
			"evaluacion": "",
			"evaluada": false
		}
	]
	
	no_conformidades_filtradas = no_conformidades_pendientes.duplicate(true)

# Eliminar o completar esta funci√≥n si no se usa
func _on_toggle_panel_busqueda():
	pass  # Esta funci√≥n no se usa en la escena actual

func _on_toggle_resultados():
	# Alternar visibilidad de los resultados
	resultados_visibles = !resultados_visibles
	
	if resultados_visibles:
		$ContenedorPrincipal/PanelBusqueda/ResultadosBusqueda.visible = true
		# Si hay texto de b√∫squeda, actualizar los resultados
		if $ContenedorPrincipal/PanelBusqueda/HBoxBusqueda/InputBusqueda.text.strip_edges() != "":
			_on_buscar_nc()
	else:
		$ContenedorPrincipal/PanelBusqueda/ResultadosBusqueda.visible = false
	
	# Actualizar texto del bot√≥n
	_actualizar_boton_toggle()

func _actualizar_boton_toggle():
	var boton = $ContenedorPrincipal/PanelBusqueda/HBoxBusqueda/BtnToggleResultados
	
	if resultados_visibles:
		boton.text = "‚ñº OCULTAR"
		boton.tooltip_text = "Ocultar resultados de b√∫squeda"
	else:
		boton.text = "‚ñ≤ MOSTRAR"
		boton.tooltip_text = "Mostrar resultados de b√∫squeda"

func _on_buscar_nc():
	var termino_busqueda = $ContenedorPrincipal/PanelBusqueda/HBoxBusqueda/InputBusqueda.text.strip_edges().to_lower()
	
	if termino_busqueda == "":
		no_conformidades_filtradas = no_conformidades_pendientes.duplicate(true)
	else:
		no_conformidades_filtradas = []
		for nc in no_conformidades_pendientes:
			var texto_busqueda = "%s %s %s %s" % [nc["id"], nc["descripcion"], nc["tipo"], nc["responsable"]]
			if termino_busqueda in texto_busqueda.to_lower():
				no_conformidades_filtradas.append(nc)
	
	_actualizar_resultados_busqueda()
	
	# Si hay resultados y estamos en modo b√∫squeda, activar modo centrado
	if no_conformidades_filtradas.size() > 0 and termino_busqueda != "":
		_activar_modo_centrado()
	else:
		_desactivar_modo_centrado()
		
	# Si hay resultados y est√°n ocultos, mostrarlos autom√°ticamente
	if no_conformidades_filtradas.size() > 0 and not resultados_visibles:
		resultados_visibles = true
		$ContenedorPrincipal/PanelBusqueda/ResultadosBusqueda.visible = true
		_actualizar_boton_toggle()

func _activar_modo_centrado():
	# Activar modo donde solo se muestran los resultados centrados
	modo_busqueda_centrada = true
	
	# Ocultar otros elementos
	$ContenedorPrincipal/FormContainer.visible = false
	$ContenedorPrincipal/PanelAcciones.visible = false
	
	# Expandir el panel de b√∫squeda para que ocupe m√°s espacio
	var panel_busqueda = $ContenedorPrincipal/PanelBusqueda
	panel_busqueda.custom_minimum_size = Vector2(0, 400)  # Hacerlo m√°s alto
	panel_busqueda.size_flags_vertical = 3  # Permitir que se expanda
	
	# Expandir el contenedor de resultados
	var resultados = $ContenedorPrincipal/PanelBusqueda/ResultadosBusqueda
	resultados.custom_minimum_size = Vector2(0, 300)
	
	# Cambiar texto del bot√≥n de b√∫squeda para indicar que se puede volver
	var btn_buscar = $ContenedorPrincipal/PanelBusqueda/HBoxBusqueda/BtnBuscar
	btn_buscar.text = "üîô VOLVER"
	
	# Desconectar cualquier conexi√≥n previa y conectar a _desactivar_modo_centrado
	if btn_buscar.is_connected("pressed", _on_buscar_nc):
		btn_buscar.disconnect("pressed", _on_buscar_nc)
	btn_buscar.connect("pressed", _desactivar_modo_centrado)
	
	# Cambiar bot√≥n de evaluaci√≥n para volver tambi√©n
	var btn_evaluar = $ContenedorPrincipal/PanelBusqueda/HBoxBusqueda/BtnEvaluarNC
	btn_evaluar.visible = false
	
	# Cambiar bot√≥n de toggle resultados
	var btn_toggle_resultados = $ContenedorPrincipal/PanelBusqueda/HBoxBusqueda/BtnToggleResultados
	btn_toggle_resultados.visible = false
	
	# Agregar mensaje informativo
	$ContenedorPrincipal/PanelBusqueda/LabelBusqueda.text = "Resultados de B√∫squeda (Modo Centrado)"
	
func _desactivar_modo_centrado():
	# Desactivar modo centrado
	modo_busqueda_centrada = false
	
	# Mostrar todos los elementos
	$ContenedorPrincipal/FormContainer.visible = true
	$ContenedorPrincipal/PanelAcciones.visible = true
	
	# Restaurar tama√±o del panel de b√∫squeda
	var panel_busqueda = $ContenedorPrincipal/PanelBusqueda
	panel_busqueda.custom_minimum_size = Vector2(0, 120)
	panel_busqueda.size_flags_vertical = 0
	
	# Restaurar tama√±o del contenedor de resultados
	var resultados = $ContenedorPrincipal/PanelBusqueda/ResultadosBusqueda
	resultados.custom_minimum_size = Vector2(0, 0)
	
	# Restaurar bot√≥n de b√∫squeda
	var btn_buscar = $ContenedorPrincipal/PanelBusqueda/HBoxBusqueda/BtnBuscar
	btn_buscar.text = "üîç BUSCAR"
	
	# Desconectar cualquier conexi√≥n previa y reconectar a _on_buscar_nc
	if btn_buscar.is_connected("pressed", _desactivar_modo_centrado):
		btn_buscar.disconnect("pressed", _desactivar_modo_centrado)
	if not btn_buscar.is_connected("pressed", _on_buscar_nc):
		btn_buscar.connect("pressed", _on_buscar_nc)
	
	# Mostrar bot√≥n de evaluaci√≥n nuevamente
	var btn_evaluar = $ContenedorPrincipal/PanelBusqueda/HBoxBusqueda/BtnEvaluarNC
	btn_evaluar.visible = true
	
	# Mostrar bot√≥n de toggle resultados nuevamente
	var btn_toggle_resultados = $ContenedorPrincipal/PanelBusqueda/HBoxBusqueda/BtnToggleResultados
	btn_toggle_resultados.visible = true
	
	# Restaurar t√≠tulo del panel
	$ContenedorPrincipal/PanelBusqueda/LabelBusqueda.text = "Buscar y Evaluar No Conformidades"
	
	# Limpiar campo de b√∫squeda
	$ContenedorPrincipal/PanelBusqueda/HBoxBusqueda/InputBusqueda.text = ""
	
	# Mostrar todas las no conformidades nuevamente
	no_conformidades_filtradas = no_conformidades_pendientes.duplicate(true)
	_actualizar_resultados_busqueda()

func _on_buscar_enter(texto):
	_on_buscar_nc()

func _actualizar_resultados_busqueda():
	var resultados = $ContenedorPrincipal/PanelBusqueda/ResultadosBusqueda
	resultados.clear()
	
	if no_conformidades_filtradas.size() == 0:
		resultados.add_item("No se encontraron no conformidades")
		resultados.set_item_custom_fg_color(0, Color(0.5, 0.5, 0.5))
		resultados.set_item_selectable(0, false)
		return
	
	for nc in no_conformidades_filtradas:
		var texto = "%s - %s" % [nc["id"], nc["descripcion"]]
		if nc["evaluada"]:
			texto += " [‚úÖ Evaluada]"
		else:
			texto += " [‚ùå Pendiente]"
		
		resultados.add_item(texto)
		
		# Cambiar color seg√∫n si est√° evaluada o no
		var indice = resultados.item_count - 1
		if nc["evaluada"]:
			resultados.set_item_custom_fg_color(indice, Color(0.2, 0.6, 0.2))
		else:
			resultados.set_item_custom_fg_color(indice, Color(0.8, 0.2, 0.2))

func _on_nc_seleccionada(index):
	if index < 0 or index >= no_conformidades_filtradas.size():
		return
	
	no_conformidad_seleccionada = no_conformidades_filtradas[index]
	
	# Si estamos en modo centrado, desactivarlo al seleccionar un resultado
	if modo_busqueda_centrada:
		_desactivar_modo_centrado()
	
	# Actualizar informaci√≥n en el formulario
	var info_label = $ContenedorPrincipal/FormContainer/GridForm/InfoNCSeleccionada
	var texto = "%s - %s" % [no_conformidad_seleccionada["id"], no_conformidad_seleccionada["descripcion"]]
	
	if no_conformidad_seleccionada["evaluada"]:
		texto += " (‚úÖ Evaluada)"
		info_label.add_theme_color_override("font_color", Color(0.2, 0.6, 0.2))
	else:
		texto += " (‚ùå No evaluada)"
		info_label.add_theme_color_override("font_color", Color(0.8, 0.2, 0.2))
	
	info_label.text = texto
	
	# Si ya est√° evaluada, habilitar el formulario
	if no_conformidad_seleccionada["evaluada"]:
		mostrar_mensaje("NC Seleccionada", "No conformidad seleccionada. Puede proceder a crear la acci√≥n correctiva.")
	else:
		mostrar_mensaje("NC Seleccionada", "No conformidad seleccionada. Debe evaluarla antes de crear una acci√≥n correctiva.")

func _on_evaluar_nc():
	if no_conformidad_seleccionada == null:
		mostrar_error("Debe seleccionar una no conformidad primero")
		return
	
	# Configurar el di√°logo de evaluaci√≥n
	$DialogoEvaluacion/VBoxContainer2/InfoNCDetalle.text = "ID: %s\nDescripci√≥n: %s\nTipo: %s\nFecha: %s\n√Årea: %s\nResponsable: %s" % [
		no_conformidad_seleccionada["id"],
		no_conformidad_seleccionada["descripcion"],
		no_conformidad_seleccionada["tipo"],
		no_conformidad_seleccionada["fecha"],
		no_conformidad_seleccionada["area"],
		no_conformidad_seleccionada["responsable"]
	]
	
	# Limpiar campos de evaluaci√≥n
	$DialogoEvaluacion/VBoxContainer2/OpcionesSeveridad.selected = 0
	$DialogoEvaluacion/VBoxContainer2/OpcionesImpacto.selected = 0
	$DialogoEvaluacion/VBoxContainer2/InputEvaluacion.text = ""
	
	# Mostrar di√°logo
	$DialogoEvaluacion.popup_centered()

func _on_dialogo_evaluacion_guardar():
	if no_conformidad_seleccionada == null:
		return
	
	# Validar campos
	var severidad = $DialogoEvaluacion/VBoxContainer2/OpcionesSeveridad.text
	var impacto = $DialogoEvaluacion/VBoxContainer2/OpcionesImpacto.text
	var evaluacion = $DialogoEvaluacion/VBoxContainer2/InputEvaluacion.text.strip_edges()
	
	if evaluacion == "":
		mostrar_error("Debe ingresar una evaluaci√≥n")
		return
	
	# Actualizar la no conformidad con la evaluaci√≥n
	no_conformidad_seleccionada["severidad"] = severidad
	no_conformidad_seleccionada["area_impacto"] = impacto
	no_conformidad_seleccionada["evaluacion"] = evaluacion
	no_conformidad_seleccionada["evaluada"] = true
	no_conformidad_seleccionada["fecha_evaluacion"] = obtener_fecha_actual()
	
	# Actualizar resultados de b√∫squeda
	_actualizar_resultados_busqueda()
	
	# Actualizar informaci√≥n en el formulario
	var info_label = $ContenedorPrincipal/FormContainer/GridForm/InfoNCSeleccionada
	info_label.text = "%s - %s (‚úÖ Evaluada)" % [no_conformidad_seleccionada["id"], no_conformidad_seleccionada["descripcion"]]
	info_label.add_theme_color_override("font_color", Color(0.2, 0.6, 0.2))
	
	# Cerrar di√°logo
	$DialogoEvaluacion.hide()
	
	mostrar_mensaje("Evaluaci√≥n Guardada", "La no conformidad %s ha sido evaluada correctamente." % no_conformidad_seleccionada["id"])

func _on_registrar_accion():
	# Validar que haya una no conformidad seleccionada y evaluada
	if no_conformidad_seleccionada == null:
		mostrar_error("Debe seleccionar una no conformidad primero")
		return
	
	if not no_conformidad_seleccionada["evaluada"]:
		mostrar_error("Debe evaluar la no conformidad antes de crear una acci√≥n correctiva")
		return
	
	# Validar campos del formulario
	var descripcion = $ContenedorPrincipal/FormContainer/GridForm/InputDescripcion.text
	var responsable = $ContenedorPrincipal/FormContainer/GridForm/InputResponsable.text
	var fecha_limite = $ContenedorPrincipal/FormContainer/GridForm/InputFechaLimite.text
	
	if descripcion.strip_edges() == "":
		mostrar_error("Debe ingresar una descripci√≥n de la acci√≥n")
		return
	
	if responsable.strip_edges() == "":
		mostrar_error("Debe especificar un responsable")
		return
	
	if fecha_limite.strip_edges() == "":
		mostrar_error("Debe establecer una fecha l√≠mite")
		return
	
	# Validar formato de fecha (simple)
	if not _validar_fecha(fecha_limite):
		mostrar_error("Formato de fecha inv√°lido. Use DD/MM/AAAA")
		return
	
	# Crear nueva acci√≥n correctiva
	var nueva_accion = {
		"id": "AC-%03d" % (acciones_correctivas.size() + 1),
		"no_conformidad": no_conformidad_seleccionada["id"],
		"descripcion_nc": no_conformidad_seleccionada["descripcion"],
		"descripcion": descripcion,
		"responsable": responsable,
		"fecha_limite": fecha_limite,
		"fecha_registro": obtener_fecha_actual(),
		"estado": "Pendiente",
		"completado": 0,
		"tareas": [],
		"severidad_nc": no_conformidad_seleccionada["severidad"],
		"impacto_nc": no_conformidad_seleccionada.get("area_impacto", "")
	}
	
	acciones_correctivas.append(nueva_accion)
	
	# Actualizar tabla
	_actualizar_tabla()
	
	# Limpiar formulario
	_on_limpiar_formulario()
	
	# Limpiar selecci√≥n de no conformidad
	no_conformidad_seleccionada = null
	var info_label = $ContenedorPrincipal/FormContainer/GridForm/InfoNCSeleccionada
	info_label.text = "Ninguna seleccionada"
	info_label.add_theme_color_override("font_color", Color(0.2, 0.4, 0.7, 1))
	
	mostrar_mensaje("Acci√≥n Registrada", "Acci√≥n correctiva %s registrada correctamente" % nueva_accion["id"])

func _validar_fecha(fecha_str):
	# Validaci√≥n simple de fecha DD/MM/AAAA
	var regex = RegEx.new()
	regex.compile("^\\d{2}/\\d{2}/\\d{4}$")
	return regex.search(fecha_str) != null

func _on_asignar_tareas():
	# Obtener acci√≥n seleccionada en la tabla
	var tabla = $ContenedorPrincipal/PanelAcciones/ScrollContainer/TablaAcciones
	var seleccionados = tabla.get_selected_items()
	
	if seleccionados.size() == 0:
		mostrar_error("Debe seleccionar una acci√≥n de la tabla")
		return
	
	# Calcular correctamente el √≠ndice en el array
	var fila_tabla = seleccionados[0]
	if fila_tabla < 6:  # Los primeros 6 son encabezados
		mostrar_error("Selecci√≥n inv√°lida: No puede seleccionar encabezados")
		return
	
	# Calcular √≠ndice en el array (restar encabezados y dividir por columnas)
	var indice = (fila_tabla - 6) / 6
	
	if indice < 0 or indice >= acciones_correctivas.size():
		mostrar_error("Selecci√≥n inv√°lida")
		return
	
	var accion = acciones_correctivas[indice]
	
	# Configurar y mostrar di√°logo de tareas
	$DialogoTareas/VBoxContainer/LabelAccion.text = "Asignar tareas a: %s" % accion["id"]
	$DialogoTareas/VBoxContainer/InputTareaDescripcion.text = ""
	$DialogoTareas/VBoxContainer/InputTareaResponsable.text = ""
	$DialogoTareas/VBoxContainer/InputTareaFechaLimite.text = obtener_fecha_actual()
	
	$DialogoTareas.popup_centered()

func _on_dialogo_tareas_guardar():
	# Validar campos del di√°logo
	var descripcion = $DialogoTareas/VBoxContainer/InputTareaDescripcion.text
	var responsable = $DialogoTareas/VBoxContainer/InputTareaResponsable.text
	var fecha = $DialogoTareas/VBoxContainer/InputTareaFechaLimite.text
	
	if descripcion.strip_edges() == "":
		mostrar_error("Debe ingresar descripci√≥n de la tarea")
		return
	
	if responsable.strip_edges() == "":
		mostrar_error("Debe especificar responsable de la tarea")
		return
	
	if fecha.strip_edges() == "" or not _validar_fecha(fecha):
		mostrar_error("Debe establecer una fecha l√≠mite v√°lida (DD/MM/AAAA)")
		return
	
	# Obtener acci√≥n seleccionada
	var tabla = $ContenedorPrincipal/PanelAcciones/ScrollContainer/TablaAcciones
	var seleccionados = tabla.get_selected_items()
	if seleccionados.size() == 0:
		return
	
	# Calcular correctamente el √≠ndice en el array
	var fila_tabla = seleccionados[0]
	if fila_tabla < 6:  # Los primeros 6 son encabezados
		mostrar_error("Selecci√≥n inv√°lida: No puede seleccionar encabezados")
		return
	
	var indice = (fila_tabla - 6) / 6
	if indice < 0 or indice >= acciones_correctivas.size():
		mostrar_error("Selecci√≥n inv√°lida")
		return
	
	var accion = acciones_correctivas[indice]
	
	# Agregar tarea
	var nueva_tarea = {
		"id": "T-%02d" % (accion["tareas"].size() + 1),
		"descripcion": descripcion,
		"responsable": responsable,
		"fecha_limite": fecha,
		"estado": "Pendiente",
		"fecha_asignacion": obtener_fecha_actual()
	}
	
	accion["tareas"].append(nueva_tarea)
	accion["estado"] = "En Progreso"
	
	# Actualizar tabla
	_actualizar_tabla()
	
	# Cerrar di√°logo
	$DialogoTareas.hide()
	
	mostrar_mensaje("Tarea Asignada", "Tarea asignada a la acci√≥n %s" % accion["id"])

func _on_notificar_estado():
	# Obtener acci√≥n seleccionada en la tabla
	var tabla = $ContenedorPrincipal/PanelAcciones/ScrollContainer/TablaAcciones
	var seleccionados = tabla.get_selected_items()
	
	if seleccionados.size() == 0:
		mostrar_error("Debe seleccionar una acci√≥n de la tabla")
		return
	
	# Calcular correctamente el √≠ndice en el array
	var fila_tabla = seleccionados[0]
	if fila_tabla < 6:  # Los primeros 6 son encabezados
		mostrar_error("Selecci√≥n inv√°lida: No puede seleccionar encabezados")
		return
	
	var indice = (fila_tabla - 6) / 6
	if indice < 0 or indice >= acciones_correctivas.size():
		mostrar_error("Selecci√≥n inv√°lida")
		return
	
	var accion = acciones_correctivas[indice]
	
	# Simular notificaci√≥n
	print("=== NOTIFICACI√ìN DE ESTADO ===")
	print("Acci√≥n Correctiva: %s" % accion["id"])
	print("No Conformidad: %s" % accion["no_conformidad"])
	print("Responsable: %s" % accion["responsable"])
	print("Estado actual: %s" % accion["estado"])
	print("Fecha l√≠mite: %s" % accion["fecha_limite"])
	print("Tareas asignadas: %d" % accion["tareas"].size())
	print("Severidad NC: %s" % accion.get("severidad_nc", "No especificada"))
	print("Impacto NC: %s" % accion.get("impacto_nc", "No especificado"))
	print("---------------------------")
	
	mostrar_mensaje("Notificaci√≥n Enviada", "Se ha enviado notificaci√≥n del estado a los responsables")

func _on_limpiar_formulario():
	$ContenedorPrincipal/FormContainer/GridForm/InputDescripcion.text = ""
	$ContenedorPrincipal/FormContainer/GridForm/InputResponsable.text = ""
	$ContenedorPrincipal/FormContainer/GridForm/InputFechaLimite.text = obtener_fecha_actual()
	
	# No limpiamos la no conformidad seleccionada, solo los campos de entrada

func _on_actualizar_tabla():
	_actualizar_tabla()
	mostrar_mensaje("Tabla Actualizada", "La tabla de acciones se ha actualizado")

func _actualizar_tabla():
	var tabla = $ContenedorPrincipal/PanelAcciones/ScrollContainer/TablaAcciones
	
	# Limpiar tabla (excepto encabezados)
	tabla.clear()
	
	# Agregar encabezados nuevamente
	tabla.add_item("ID")
	tabla.add_item("No Conformidad")
	tabla.add_item("Descripci√≥n")
	tabla.add_item("Responsable")
	tabla.add_item("Fecha L√≠mite")
	tabla.add_item("Estado")
	
	# Deshabilitar selecci√≥n de encabezados
	for i in range(6):
		tabla.set_item_selectable(i, false)
	
	# Agregar acciones
	for i in range(acciones_correctivas.size()):
		var accion = acciones_correctivas[i]
		var fila_inicio = tabla.get_item_count()
		
		tabla.add_item(accion["id"])
		tabla.add_item(accion["no_conformidad"])
		tabla.add_item(accion["descripcion"])
		tabla.add_item(accion["responsable"])
		tabla.add_item(accion["fecha_limite"])
		tabla.add_item(accion["estado"])
		
		# Color seg√∫n estado
		for j in range(6):
			match accion["estado"]:
				"Pendiente":
					tabla.set_item_custom_fg_color(fila_inicio + j, Color.RED)
				"En Progreso":
					tabla.set_item_custom_fg_color(fila_inicio + j, Color.ORANGE)
				"Completada":
					tabla.set_item_custom_fg_color(fila_inicio + j, Color.GREEN)

func obtener_fecha_actual():
	# Retorna la fecha actual en formato dd/mm/aaaa
	var tiempo = Time.get_datetime_dict_from_system()
	return "%02d/%02d/%04d" % [tiempo.day, tiempo.month, tiempo.year]

func _on_volver_menu():
	# Cambiar a la escena del men√∫ principal
	get_tree().change_scene_to_file("res://escenas/menu_principal.tscn")

func mostrar_error(mensaje):
	$PopupError.dialog_text = mensaje
	$PopupError.popup_centered()

func mostrar_mensaje(titulo, mensaje):
	$PopupMensaje.title = titulo
	$PopupMensaje.dialog_text = mensaje
	$PopupMensaje.popup_centered()
